bridge-firmwareOOP/debuglog.txt
WARNING: library ArduinoSTL claims to run on avr, samd architecture(s) and may be incompatible with your current board which runs on sam architecture(s).
/home/lonn/splitcontroller/bridge-firmwareOOP/bridge-firmwareOOP.ino: In member function 'void Contr::init()':
/home/lonn/splitcontroller/bridge-firmwareOOP/bridge-firmwareOOP.ino:172:24: error: expected unqualified-id before '[' token
       for (const auto& [key, pinnr] : m_ps4pins) {
                        ^
/home/lonn/splitcontroller/bridge-firmwareOOP/bridge-firmwareOOP.ino:172:24: error: expected ';' before '[' token
/home/lonn/splitcontroller/bridge-firmwareOOP/bridge-firmwareOOP.ino:172:25: error: 'key' was not declared in this scope
       for (const auto& [key, pinnr] : m_ps4pins) {
                         ^
/home/lonn/splitcontroller/bridge-firmwareOOP/bridge-firmwareOOP.ino:172:30: error: 'pinnr' was not declared in this scope
       for (const auto& [key, pinnr] : m_ps4pins) {
                              ^
/home/lonn/splitcontroller/bridge-firmwareOOP/bridge-firmwareOOP.ino: In lambda function:
/home/lonn/splitcontroller/bridge-firmwareOOP/bridge-firmwareOOP.ino:172:37: error: expected '{' before ':' token
       for (const auto& [key, pinnr] : m_ps4pins) {
                                     ^
/home/lonn/splitcontroller/bridge-firmwareOOP/bridge-firmwareOOP.ino: In member function 'void Contr::init()':
/home/lonn/splitcontroller/bridge-firmwareOOP/bridge-firmwareOOP.ino:172:37: error: expected ';' before ':' token
/home/lonn/splitcontroller/bridge-firmwareOOP/bridge-firmwareOOP.ino:172:37: error: expected primary-expression before ':' token
/home/lonn/splitcontroller/bridge-firmwareOOP/bridge-firmwareOOP.ino:172:37: error: expected ')' before ':' token
/home/lonn/splitcontroller/bridge-firmwareOOP/bridge-firmwareOOP.ino:172:37: error: expected primary-expression before ':' token
/home/lonn/splitcontroller/bridge-firmwareOOP/bridge-firmwareOOP.ino:172:37: error: expected ';' before ':' token

Error during build: exit status 1
